--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,14 @@
   width: 200px;
 }
 
+#modpack-edit-dialog .cell-highlight {
+  display: flex !important;
+  align-items: center;
+  > * {
+    margin: 0 0.5em;
+  }
+}
+
 #modpack-edit-dialog .modpack-edit-export {
   display: flex;
   flex-direction: column;
