--- a/style.scss
+++ b/style.scss
@@ -117,6 +117,23 @@
       background-color: rgba($gray-lighter, 0.5);
     }
 
+    .carousel-indicators {
+      bottom: 0;
+      margin-bottom: 0;
+      width: 70%;
+      margin-left: -35%;
+
+      li {
+        width: 6px;
+        height: 6px;
+
+        &.active {
+          width: 10px;
+          height: 10px;
+        }
+      }
+    }
+
     .carousel-inner > .item > img {
       height: 55vh;
       margin-left: auto;
