--- a/style.scss
+++ b/style.scss
@@ -174,6 +174,10 @@ $collection-thumbnail-height: 320px;
 
     width: $collection-thumbnail-width;
     height: $collection-thumbnail-height;
+
+    &:hover {
+      border: 2px solid $brand-clickable;
+    }
   }
 
   > .panel-body {
@@ -202,9 +206,14 @@ $collection-thumbnail-height: 320px;
   }
 }
 
+.collection-list {
+  .collection-thumbnail.panel {
+    margin: $half-gutter;
+  }
+}
+
 .collection-thumbnail {
   position: relative;
-  width: $collection-thumbnail-width;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.35);
 
   > .collection-thumbnail-body.panel-body {
@@ -214,7 +223,8 @@ $collection-thumbnail-height: 320px;
   &.panel {
     border: 0;
     border-radius: $border-radius;
-    margin: $half-gutter;
+    width: $collection-thumbnail-width;
+    height: $collection-thumbnail-height;
   }
 
   .gradient {
@@ -293,7 +303,7 @@ $collection-thumbnail-height: 320px;
       margin-left: auto;
       margin-right: auto;
       justify-content: center;
-      > btn {
+      > .btn {
         justify-content: center;
       }
     }
@@ -308,3 +318,101 @@ $collection-thumbnail-height: 320px;
     margin: auto;
   }
 }
+
+#collection-panel-group .panel-heading {
+  display: flex;
+  align-items: center;
+
+  >.panel-title {
+    margin-left: 0.5em;
+  }
+}
+
+#collection-page {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.collection-overview {
+  padding: $half-gutter;
+
+  .media {
+    margin-bottom: $half-gutter;
+  }
+
+  .collection-thumbnail {
+    margin: 0 $half-gutter;
+  }
+
+  .collection-title {
+    @extend .h3;
+  }
+
+  .collection-detail-cell {
+    padding: 0 0.5em;
+
+    &:not(:first-child) {
+      border-left: 1px solid $gray-light;
+    }
+
+    img {
+      width: 32px;
+      height: 32px;
+      margin-right: 0.5em;
+    }
+
+    .title {
+      color: $text-color-disabled;
+    }
+  }
+}
+
+.collection-details {
+  .collection-mods-panel {
+    margin: $half-gutter;
+
+    .table-main-pane .cell-author {
+      .img-circle {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
+
+  .table-container {
+    .table-header-pane {
+      right: 0;
+    }
+  }
+
+  .table-header-cell.header-enabled {
+    min-width: 12em;
+  }
+
+  .table-header-cell.header-size {
+    min-width: 7em;
+  }
+
+  .table-mods.cell-enabled {
+    white-space: nowrap;
+    .icon-spinner {
+      margin-right: 0.5em;
+    }
+
+    .collection-status-progress {
+      position: relative;
+      .progress {
+        margin: 0;
+      }
+      > .progress-title {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+      }
+    }
+  }
+}
+
