added support for success voting
also
- caching for revision/collection information
- added health indivator (WIP)

--- a/style.scss
+++ b/style.scss
@@ -621,3 +621,9 @@ $collection-thumbnail-height: 320px;
     overflow: auto;
   }
 }
+
+.collection-health-indicator {
+  .icon-button {
+    @extend .btn-embed;
+  }
+}
