--- a/style.scss
+++ b/style.scss
@@ -386,7 +386,7 @@ $collection-thumbnail-height: 320px;
 
 
 .collection-overview {
-  padding: $half-gutter;
+  margin: $half-gutter;
   overflow: hidden;
 
   .media {
