highlight collections in the mod list

--- a/style.scss
+++ b/style.scss
@@ -655,3 +655,7 @@ $collection-thumbnail-height: 320px;
     max-height: 80vh;
   }
 }
+
+.mod-modtype-collection {
+  background: rgba(255, 215, 0, 0.1);
+}
