--- a/style.scss
+++ b/style.scss
@@ -244,6 +244,13 @@ $collection-thumbnail-height: 320px;
 
   > .collection-thumbnail-body.panel-body {
     padding: 0;
+
+    > img {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
+    }
   }
 
   &.panel {
