activity indicator while gathering dependencies
on the collection page that is

--- a/style.scss
+++ b/style.scss
@@ -445,7 +445,7 @@ $collection-thumbnail-height: 320px;
     min-width: 12em;
   }
 
-  .table-header-cell.header-size {
+  .table-header-cell.header-filesize {
     min-width: 7em;
   }
 
