implemented previously defunct ui elements
also fixes to non-semver version matching

--- a/style.scss
+++ b/style.scss
@@ -363,6 +363,12 @@ $collection-thumbnail-height: 320px;
       }
     }
   }
+
+  .details {
+    .icon {
+      margin-right: 1em;
+    }
+  }
 }
 
 .collection-list {
