fixed: offered to add nested collections
this wasn't supported when exporting the collection anyway.
This also fixes a problem where we allowed to edit imported collections

--- a/style.scss
+++ b/style.scss
@@ -394,6 +394,11 @@ $collection-thumbnail-height: 288px;
         font-family: $font-family-base;
         font-size: medium;
       }
+
+      .btn {
+        margin-left: 0.5em;
+        font-size: medium;
+      }
     }
   }
 
