--- a/style.scss
+++ b/style.scss
@@ -62,11 +62,15 @@ $collection-thumbnail-height: 288px;
   h3 {
     margin-top: auto;
     margin-bottom: auto;
-    padding-right: 1em;
+    padding-right: 2rem;
     border-right: $border-width solid $border-color;
   }
   .btn {
     margin: auto 1em;
+
+    &:first-child {
+      margin-left: 2rem;
+    }
   }
 }
 
